2004-07-20  Kees Cook  <kees@outflux.net>

    * src/dialogs/desktop-preferences.cpp: corrected my usage of static
	  l18n strings.
    * src/dialogs/stroke-style.cpp: fixed missing l18n. (bug #994837)
    * src/dialogs/sp-attribute-widget.cpp: went hunting for other static
      l18n strings.  Fixed some here too.
	* autogen.sh: cleanups and more debugging.

2004-07-18  MenTaLguY  <mental@rydia.net>

	* configure.in, src/Makefile.am, src/algorithms/Makefile_insert,
	  src/algorithms/makefile.in, src/traits/Makefile_insert,
	  src/traits/makefile.in, src/util/Makefile_insert, src/util/makefile.in:
	  
	  added src/algorithms, src/traits, and src/util subdirs
	
	* src/algorithms/longest-common-suffix.h:

	  added generic "longest common suffix" algorithm

	* src/traits/list.h: added traits class for lists

	* src/traits/tree-iterator.h: added traits class for n-ary tree iterators

	* src/util/list-iterator.h: STL iterator for lists

	* src/util/parent-axis.h: parent "axis" of tree iterator as list

	* src/util/sibling-axis.h: sibling "axis" of tree iterator as list

	* src/xml/repr.h: specialize Traits::TreeIterator for SPRepr *

	* src/sp-object.h: specialize Traits::TreeIterator for SPObject *
	
	* src/sp-object.cpp: use generic "longest common suffix" to find
	                     nearest common ancestor
	
	* src/splivarot.cpp: use genric "longest common suffix" to find
	                     nearest common ancestor here too

2004-07-18  Kees Cook  <kees@outflux.net>

	* Makefile.am, configure.in, autogen.sh, toolversions.sh:
      cleaning up some automake misbehavior from the gtkmm patch.
	  automake 1.4isms snuck back in.
	* src/desktop-events.cpp: unlocalized strings updated.

2004-07-18  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-path.cpp (sp_path_write): Handle shape->curve==NULL.

2004-07-18  MenTaLguY  <mental@rydia.net>

	* Makefile.am, configure.in, m4/Makefile.am, m4/codeset.m4, m4/gettext.m4,